# E-Comm

./: .gitignore  DESIGN_THINKING.md  README.md  main.py  pyproject.toml
backend/: main.py
backend/agents/: base_agent.py  escalation_agent.py  faq_agent.py  llm.py  orchestrator.py  order_agent.py  refund_agent.py
backend/api/: __init__.py
backend/api/routes/: approvals.py  chat.py  logs.py  orders.py  refunds.py
backend/config/: settings.py
backend/database/: models.py  seed.py  session.py
backend/graph/: builder.py  state.py
backend/guardrails/: loop_guard.py  privacy_guard.py  refund_guard.py
backend/monitoring/: audit_logger.py  langsmith_tracer.py
backend/schemas/: __init__.py  approval.py  chat.py  order.py  refund.py
backend/tools/: faq_tools.py  order_tools.py  refund_tools.py
data/faq/: policies.md
docs/: DESIGN.md
frontend/: streamlit_app.py
tests/: conftest.py  test_agents.py  test_api.py
